main-old.tf
resource "aws_vpc" "main" {

  cidr_block           = var.vpc_cidr

  enable_dns_support   = true

  enable_dns_hostnames = true

  tags = {
    Name        = "enterprise-vpc"
    Environment = var.environment
    ManagedBy   = "Terraform"
  }

}
resource "aws_subnet" "public_subnet" {

  vpc_id                  = aws_vpc.main.id

  cidr_block              = var.public_subnet_cidr

  availability_zone       = "ap-southeast-1a"

  map_public_ip_on_launch = true

  tags = {
    Name = "public-subnet"
  }

}
resource "aws_subnet" "private_subnet" {

  vpc_id            = aws_vpc.main.id

  cidr_block        =  var.private_subnet_cidr

  availability_zone = "ap-southeast-1b"

  tags = {
    Name = "private-subnet"
  }

}
resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.main.id

  tags = {
    Name = "enterprise-igw"
  }

}
resource "aws_route_table" "public_rt" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.igw.id

  }

  tags = {
    Name = "public-route-table"
  }

}
resource "aws_route_table_association" "public_assoc" {

  subnet_id      = aws_subnet.public_subnet.id

  route_table_id = aws_route_table.public_rt.id

}
resource "aws_security_group" "web_sg" {

  name        = "web-security-group"

  description = "Allow HTTP and SSH"

  vpc_id      = aws_vpc.main.id

  ingress {

    from_port   = 22

    to_port     = 22

    protocol    = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {

    from_port   = 80

    to_port     = 80

    protocol    = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {

    from_port   = 0

    to_port     = 0

    protocol    = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {
    Name = "web-security-group"
  }

}
